# MUDShachathon-streamalit-template

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
.streamlit/: config.toml  secrets.toml.example
data/: seed_spots.py
pages/: 00_home.py  01_travel_plan.py  02_community_plans.py
utils/: database.py  gemini_client.py  gemini_processing.py  google_maps.py  plan_view.py  travel_plan.py  ui.py
