[project]
name = "hackathon-streamlit-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "folium>=0.20.0",
    "google-genai>=1.51.0",
    "googlemaps>=4.10.0",
    "streamlit>=1.57.0",
    "streamlit-folium>=0.25.1",
]
